test/fixture/errors/compilation_error/src/compilation_error.app.src
{application, compilation_error,
 [{description, "An OTP application"},
  {vsn, "0.1.0"},
  {registered, []},
  {mod, {compilation_error_app, []}},
  {applications,
   [kernel,
    stdlib
   ]},
  {env,[]},
  {modules, []},
  {links, []}
 ]}.
